# NeuroFlow-HiDevs

./: .env.example  .gitignore  .secrets.baseline  .trivyignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  check_redis.py  checks.json  extract.py  fix_examples.py  generate_test_doc.py  get_annotations.py  get_pipeline.py  init_db.py  jobs.json  mypy_errors.txt  mypy_errors2.txt  mypy_issues.txt  openapi_check.py  pulls.json  pyproject.toml  query_test.py  retention_test.py  ruff_errors.json  ruff_errors.txt  ruff_issues.json  run_5_queries.py  runs.json  temp.baseline  test.Dockerfile  test_doc.txt  test_extractor.py  test_pipelines.py  test_resilience.py  test_security.py  test_sse.py  test_suggestions.py  (+4 more)
.github/: dependabot.yml
backend/: .dockerignore  Dockerfile  config.py  main.py  requirements.txt  test_ingestion.py  test_provider.py  test_providers_full.py  worker.py
docs/: api-contracts.md  architecture.md  data-models.md  deployment.md  retrospective.md  runbook.md
evaluation/: best_retrieval_config.json  calibration_results.json  generation_eval.py  generation_results.json  hyperparameter_search.py  improvement_log.md  judge.py  quality_baseline.json  quality_final.json  retrieval_eval.py  retrieval_results.json  run_calibration.py
frontend/: Dockerfile  package-lock.json  package.json
infra/: Dockerfile.mlflow  docker-compose.prod.yml  docker-compose.yml  seed.sql  (+1 more)
sdk/: README.md  pyproject.toml
sdk/examples/: quickstart.py
sdk/neuroflow/: client.py  models.py
sdk/neuroflow_sdk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+115 files in other folders)
