[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "neuroflow-sdk"
version = "0.1.0"
description = "Python SDK for NeuroFlow API"
authors = [
    {name = "NeuroFlow Team"}
]
dependencies = [
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
    "httpx-sse>=0.3.1"
]
requires-python = ">=3.9"
